setting banner with css

--- a/index.html
+++ b/index.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style1.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <title>Évaluation Number One</title>
 </head>
 <body>
     <header id="head">
         <img id="Picture"src="geass.png" alt="Ceci est le logo">
         <h1>Geass<br>Cheaper<br></h1>
+
     </header>
     <main>
         <ul id="position">
             <a href="#"><li class='redirection'>nouveauté</li></a>
             <a href="#"><li class='redirection'>meilleures ventes</li></a>
             <a href="#"><li class='redirection'>FAQ</li></a>
+        <ul >
+            <a class="position" href="#"><li class='redirection'>nouveauté</li></a>
+            <a class="position" href="#"><li class='redirection'>meilleures ventes</li></a>
+            <a class="position" href="#"><li class='redirection'>FAQ</li></a>
+            <button class="buttonHead" type="btn">Login</button>
+            <button class="buttonHead" type="btn">Subscribe</button>
         </ul>
+
     </main>
 </body>
 </html> 
