--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style1.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <title>Évaluation Number One</title>
 </head>
@@ -11,13 +10,9 @@
     <header id="head">
         <img id="Picture"src="geass.png" alt="Ceci est le logo">
         <h1>Geass<br>Cheaper<br></h1>
-
+        
     </header>
     <main>
-        <ul id="position">
-            <a href="#"><li class='redirection'>nouveauté</li></a>
-            <a href="#"><li class='redirection'>meilleures ventes</li></a>
-            <a href="#"><li class='redirection'>FAQ</li></a>
         <ul >
             <a class="position" href="#"><li class='redirection'>nouveauté</li></a>
             <a class="position" href="#"><li class='redirection'>meilleures ventes</li></a>
@@ -25,7 +20,54 @@
             <button class="buttonHead" type="btn">Login</button>
             <button class="buttonHead" type="btn">Subscribe</button>
         </ul>
+        <article id="background">
+            <article class="manga">
+                <img class="Picture1" src="Akame ga kill.jpg" alt="">
+                <a class="titleOfManga"href="#">Akame ga kill tome 1</a>
+                <span>3€</span>
+           </article>
+            <article class="manga">
+                <img class="Picture1" src="Maou Gakuin.jpg" alt="">
+                <a class="titleOfManga"href="#">Maou Gakuin </a>
+                <span>1€</span>
+           </article>
+            <article class="manga">
+                <img class="Picture1" src="Attaque des titans.jpg" alt="">
+                <a class="titleOfManga"href="#">Attaque des titans </a>
+                <span>2€</span>
+           </article>
+            <article class="manga">
+                <img class="Picture1" src="Code geass.jpg" alt="">
+                <a class="titleOfManga"href="#">Code geass </a>
+                <span>1.5€</span>
+           </article>
+            <article class="manga">
+                <img class="Picture1" src="jujutsu kaisen.jpg" alt="">
+                <a class="titleOfManga"href="#">Jujutsu kaisen </a>
+                <span>3€</span>
+           </article>
+            <article class="manga">
+                <img class="Picture1" src="kaguya sama love is war.jpg" alt="">
+                <a class="titleOfManga"href="#">kaguya sama </a>
+                <span>2€</span>
+           </article>
+            <article class="manga">
+                <img class="Picture1" src="One punch man.jpg" alt="">
+                <a class="titleOfManga"href="#">One punch man  </a>
+                <span>3.5€</span>
+           </article>
+            <article class="manga">
+                <img class="Picture1" src="One piece.jpg" alt="">
+                <a class="titleOfManga"href='#'>One piece </a>
+                <span>2€</span>
+               </article>
+            <article class="manga">
+                <img class="Picture1" src="Orange.jpg" class=Picture1" " alt="">
+                <a class="titleOfManga" href='#'>Orange</a>
+                <span>3€</span>
+           </article>
+      </article>
 
     </main>
 </body>
-</html> 
+</html>
