adjustement framework to fill

--- a/index.html
+++ b/index.html
@@ -19,55 +19,73 @@
             <a class="position" href="#"><li class='redirection'>FAQ</li></a>
             <button class="buttonHead" type="btn">Login</button>
             <button class="buttonHead" type="btn">Subscribe</button>
+            <button class="position" class="buttonHead" type="btn">Login</button>
+            <button class="position" class="buttonHead" type="btn">Subscribe</button>
         </ul>
         <article id="background">
             <article class="manga">
-                <img class="Picture1" src="Akame ga kill.jpg" alt="">
+                <a href><img  class="Picture1" src="Akame ga kill.jpg" alt=""></a>
                 <a class="titleOfManga"href="#">Akame ga kill tome 1</a>
-                <span>3€</span>
+                <p>3€</p>
+                <p>État du livre:Comme neuf</p>
            </article>
             <article class="manga">
-                <img class="Picture1" src="Maou Gakuin.jpg" alt="">
+                <a href="#"><img class="Picture1" src="Maou Gakuin.jpg" alt=""></a>
                 <a class="titleOfManga"href="#">Maou Gakuin </a>
-                <span>1€</span>
+                <p>1€</p>
+                <p>État du livre:Comme neuf</p>
            </article>
             <article class="manga">
-                <img class="Picture1" src="Attaque des titans.jpg" alt="">
+                <a href="#"><img class="Picture1" src="Attaque des titans.jpg" alt=""></a>
                 <a class="titleOfManga"href="#">Attaque des titans </a>
-                <span>2€</span>
+                <p>2€</p>
+                <p>État du livre:Comme neuf</p>
            </article>
             <article class="manga">
-                <img class="Picture1" src="Code geass.jpg" alt="">
+                <a href="#"><img class="Picture1" src="Code geass.jpg" alt=""></a>
                 <a class="titleOfManga"href="#">Code geass </a>
-                <span>1.5€</span>
+                <p>1.5€</p>
+                <p>État du livre:Comme neuf</p>
            </article>
             <article class="manga">
-                <img class="Picture1" src="jujutsu kaisen.jpg" alt="">
+                <a href="#"><img class="Picture1" src="jujutsu kaisen.jpg" alt=""></a>
                 <a class="titleOfManga"href="#">Jujutsu kaisen </a>
-                <span>3€</span>
+                <p>3€</p>
+                <p>État du livre:Comme neuf</p>
            </article>
             <article class="manga">
-                <img class="Picture1" src="kaguya sama love is war.jpg" alt="">
+                <a href="#"><img class="Picture1" src="kaguya sama love is war.jpg" alt=""></a>
                 <a class="titleOfManga"href="#">kaguya sama </a>
                 <span>2€</span>
+                <p>État du livre:Comme neuf</p>
            </article>
             <article class="manga">
-                <img class="Picture1" src="One punch man.jpg" alt="">
+                <a href="#"><img class="Picture1" src="One punch man.jpg" alt=""></a>
                 <a class="titleOfManga"href="#">One punch man  </a>
-                <span>3.5€</span>
+                <p>3.5€</p>
+                <p>État du livre:Comme neuf</p>
            </article>
             <article class="manga">
-                <img class="Picture1" src="One piece.jpg" alt="">
+                <a href="#"><img class="Picture1" src="One piece.jpg" alt=""></a>
                 <a class="titleOfManga"href='#'>One piece </a>
-                <span>2€</span>
+                <p>2€</p>
+                <p>État du livre:Comme neuf</p>
                </article>
             <article class="manga">
-                <img class="Picture1" src="Orange.jpg" class=Picture1" " alt="">
+                <a href="#"><img class="Picture1" src="Orange.jpg" class=Picture1" " alt=""></a>
                 <a class="titleOfManga" href='#'>Orange</a>
-                <span>3€</span>
+                <p>3€</p>
+                <p>État du livre:Comme neuf</p>
            </article>
       </article>
 
     </main>
+    <footer>
+        <ul id='footer'>
+            <li><a href="#" type="phone">Phone : 00 00 00 00 00</a></li>
+            <li><a href="#" type="mail">Mail : EssaieType@gmail.com</a></li>
+            <li><a href="#">In concerning with ... </a></li>
+        </ul>
+    </footer>
 </body>
-</html>
+</html> 
