setting framework to the picture with css grid

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header id="head">
-        <img id="Picture"src="geass.png" alt="Ceci est le logo">
+        <a href="#"><img id="Picture"src="geass.png" alt="Ceci est le logo"></a>
         <h1>Geass<br>Cheaper<br></h1>
         
     </header>
@@ -19,8 +19,7 @@
             <a class="position" href="#"><li class='redirection'>FAQ</li></a>
             <button class="buttonHead" type="btn">Login</button>
             <button class="buttonHead" type="btn">Subscribe</button>
-            <button class="position" class="buttonHead" type="btn">Login</button>
-            <button class="position" class="buttonHead" type="btn">Subscribe</button>
+            
         </ul>
         <article id="background">
             <article class="manga">
@@ -81,11 +80,11 @@
 
     </main>
     <footer>
-        <ul id='footer'>
-            <li><a href="#" type="phone">Phone : 00 00 00 00 00</a></li>
-            <li><a href="#" type="mail">Mail : EssaieType@gmail.com</a></li>
-            <li><a href="#">In concerning with ... </a></li>
+        <ul id="footer">
+            <li ><a class="childFooter"href="#" type="phone">Phone:00 00 00 00 00</a></li>
+            <li ><a class="childFooter"href="#" type="mail">Mail:EssaieType@gmail.com</a></li>
+            <li ><a class="childFooter"href="#">In concerning with ... </a></li>
         </ul>
     </footer>
 </body>
-</html> 
+</html>
