add color to background fill

--- a/index.html
+++ b/index.html
@@ -23,58 +23,83 @@
         </ul>
         <article id="background">
             <article class="manga">
-                <a href><img  class="Picture1" src="Akame ga kill.jpg" alt=""></a>
-                <a class="titleOfManga"href="#">Akame ga kill tome 1</a>
-                <p>3€</p>
-                <p>État du livre:Comme neuf</p>
+                <a href='#'><img class="Picture1" src="One punch man.jpg"></a>
+                <div id="essaie">
+                    <a class="titleOfManga"href="#">One punch man  </a>
+                    <p>3.5€</p>
+                    <p>État du livre:Comme neuf</p>
+                    <p>Pour plus de détail:<a href="#">Cliquez ici !</a></p>
+                </div>
            </article>
             <article class="manga">
-                <a href="#"><img class="Picture1" src="Maou Gakuin.jpg" alt=""></a>
-                <a class="titleOfManga"href="#">Maou Gakuin </a>
-                <p>1€</p>
-                <p>État du livre:Comme neuf</p>
+                <a href='#'><img class="Picture1" src="jujutsu kaisen.jpg"></a>
+                <div id="essaie">
+                    <a class="titleOfManga"href='#'>Jujutsu kaisen</a>
+                    <p>2€</p>
+                    <p>État du livre:Comme neuf</p>
+                    <p>Pour plus de détail:<a href="#">Cliquez ici !</a></p>
+                </div>
            </article>
             <article class="manga">
-                <a href="#"><img class="Picture1" src="Attaque des titans.jpg" alt=""></a>
-                <a class="titleOfManga"href="#">Attaque des titans </a>
-                <p>2€</p>
-                <p>État du livre:Comme neuf</p>
+                <a  href="#"><img  class="Picture1" src="Rainbow.jpg" alt=""></a>
+                    <div id="essaie">
+                        <a class="titleOfManga" href='#'>Rainbow</a>
+                        <p>3€</p>
+                        <p>État du livre:Comme neuf</p>
+                        <p>Pour plus de détail:<a href="#">Cliquez ici !</a></p>
+                    </div>
            </article>
             <article class="manga">
-                <a href="#"><img class="Picture1" src="Code geass.jpg" alt=""></a>
-                <a class="titleOfManga"href="#">Code geass </a>
-                <p>1.5€</p>
-                <p>État du livre:Comme neuf</p>
+                <a href='#'><img class="Picture1" src="Maou Gakuin.jpg"></a>
+                <div id="essaie">
+                    <a class="titleOfManga"href="#">Maou Gakuin </a>
+                    <p>1€</p>
+                    <p>État du livre:Comme neuf</p>
+                    <p>Pour plus de détail:<a href="#">Cliquez ici !</a></p>
+                </div>
            </article>
             <article class="manga">
-                <a href="#"><img class="Picture1" src="jujutsu kaisen.jpg" alt=""></a>
-                <a class="titleOfManga"href="#">Jujutsu kaisen </a>
-                <p>3€</p>
-                <p>État du livre:Comme neuf</p>
+                <a href='#'><img class="Picture1" src="attaque des titans.jpg"></a>
+                <div id="essaie">
+                    <a class="titleOfManga"href="#">Attaque des titans </a>
+                    <p>2€</p>
+                    <p>État du livre:Comme neuf</p>
+                    <p>Pour plus de détail:<a href="#">Cliquez ici !</a></p>
+                </div>
            </article>
             <article class="manga">
-                <a href="#"><img class="Picture1" src="kaguya sama love is war.jpg" alt=""></a>
-                <a class="titleOfManga"href="#">kaguya sama </a>
-                <span>2€</span>
-                <p>État du livre:Comme neuf</p>
+                <a href='#'><img class="Picture1" src="kaguya sama love is war.jpg"></a>
+                <div id="essaie">
+                    <a class="titleOfManga"href="#">kaguya-sama </a>
+                    <p>1€</p>
+                    <p>État du livre:Comme neuf</p>
+                    <p>Pour plus de détail:<a href="#">Cliquez ici !</a></p>
+                </div>
            </article>
             <article class="manga">
-                <a href="#"><img class="Picture1" src="One punch man.jpg" alt=""></a>
-                <a class="titleOfManga"href="#">One punch man  </a>
-                <p>3.5€</p>
-                <p>État du livre:Comme neuf</p>
+                <a  href="#"><img  class="Picture1" src="Code geass.jpg" alt=""></a>
+                    <div id="essaie">
+                        <a  class="titleOfManga"href="#">Code geass</a>
+                        <p>price : 3€</p>
+                         <p  >État du livre:Comme neuf</p>
+                         <p>Pour plus de détail:<a href="#">Cliquez ici !</a></p>
+                 </div>
            </article>
             <article class="manga">
                 <a href="#"><img class="Picture1" src="One piece.jpg" alt=""></a>
-                <a class="titleOfManga"href='#'>One piece </a>
-                <p>2€</p>
-                <p>État du livre:Comme neuf</p>
+                <div id="essaie">
+                    <a class="titleOfManga"href='#'>One piece </a>
+                    <p>2€</p>
+                    <p>État du livre:Comme neuf</p>
+                </div>
                </article>
             <article class="manga">
                 <a href="#"><img class="Picture1" src="Orange.jpg" class=Picture1" " alt=""></a>
-                <a class="titleOfManga" href='#'>Orange</a>
-                <p>3€</p>
-                <p>État du livre:Comme neuf</p>
+                <div id="essaie">
+                    <a class="titleOfManga" href='#'>Orange</a>
+                    <p>3€</p>
+                    <p>État du livre:Comme neuf</p>
+                </div>
            </article>
       </article>
 
