Use bootstrap on buttun

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
     <title>Évaluation Number One</title>
 </head>
 <body>
@@ -17,8 +18,8 @@
             <a class="position" href="#"><li class='redirection'>nouveauté</li></a>
             <a class="position" href="#"><li class='redirection'>meilleures ventes</li></a>
             <a class="position" href="#"><li class='redirection'>FAQ</li></a>
-            <button class="buttonHead" type="btn">Login</button>
-            <button class="buttonHead" type="btn">Subscribe</button>
+            <button  type="button" class="btn btn-outline-light" >Login</button>
+            <button  type="button" class="btn btn-outline-success" >Subscribe</button>
             
         </ul>
         <article id="background">
@@ -106,8 +107,8 @@
     </main>
     <footer>
         <ul id="footer">
-            <li ><a class="childFooter"href="#" type="phone">Phone:00 00 00 00 00</a></li>
-            <li ><a class="childFooter"href="#" type="mail">Mail:EssaieType@gmail.com</a></li>
+            <li ><a class="childFooter"href="#" type="phone">Phone : 00 00 00 00 00</a></li>
+            <li ><a class="childFooter"href="#" type="mail">Mail : EssaieType@gmail.com</a></li>
             <li ><a class="childFooter"href="#">In concerning with ... </a></li>
         </ul>
     </footer>
