Create new fill to event

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
     </header>
     <main>
-        <ul >
+        <ul>
             <a class="position" href="#"><li class='redirection'>nouveauté</li></a>
             <a class="position" href="#"><li class='redirection'>meilleures ventes</li></a>
             <a class="position" href="#"><li class='redirection'>FAQ</li></a>
@@ -25,7 +25,7 @@
         <article id="background">
             <article class="manga">
                 <a href='#'><img class="Picture1" src="One punch man.jpg"></a>
-                <div id="essaie">
+                <div class="essaie">
                     <a class="titleOfManga"href="#">One punch man  </a>
                     <p>3.5€</p>
                     <p>État du livre:Comme neuf</p>
@@ -34,7 +34,7 @@
            </article>
             <article class="manga">
                 <a href='#'><img class="Picture1" src="jujutsu kaisen.jpg"></a>
-                <div id="essaie">
+                <div class="essaie">
                     <a class="titleOfManga"href='#'>Jujutsu kaisen</a>
                     <p>2€</p>
                     <p>État du livre:Comme neuf</p>
@@ -43,7 +43,7 @@
            </article>
             <article class="manga">
                 <a  href="#"><img  class="Picture1" src="Rainbow.jpg" alt=""></a>
-                    <div id="essaie">
+                    <div class="essaie">
                         <a class="titleOfManga" href='#'>Rainbow</a>
                         <p>3€</p>
                         <p>État du livre:Comme neuf</p>
@@ -61,7 +61,7 @@
            </article>
             <article class="manga">
                 <a href='#'><img class="Picture1" src="attaque des titans.jpg"></a>
-                <div id="essaie">
+                <div class="essaie">
                     <a class="titleOfManga"href="#">Attaque des titans </a>
                     <p>2€</p>
                     <p>État du livre:Comme neuf</p>
@@ -70,7 +70,7 @@
            </article>
             <article class="manga">
                 <a href='#'><img class="Picture1" src="kaguya sama love is war.jpg"></a>
-                <div id="essaie">
+                <div class="essaie">
                     <a class="titleOfManga"href="#">kaguya-sama </a>
                     <p>1€</p>
                     <p>État du livre:Comme neuf</p>
@@ -79,7 +79,7 @@
            </article>
             <article class="manga">
                 <a  href="#"><img  class="Picture1" src="Code geass.jpg" alt=""></a>
-                    <div id="essaie">
+                    <div class="essaie">
                         <a  class="titleOfManga"href="#">Code geass</a>
                         <p>price : 3€</p>
                          <p  >État du livre:Comme neuf</p>
@@ -88,7 +88,7 @@
            </article>
             <article class="manga">
                 <a href="#"><img class="Picture1" src="One piece.jpg" alt=""></a>
-                <div id="essaie">
+                <div class="essaie">
                     <a class="titleOfManga"href='#'>One piece </a>
                     <p>2€</p>
                     <p>État du livre:Comme neuf</p>
@@ -96,7 +96,7 @@
                </article>
             <article class="manga">
                 <a href="#"><img class="Picture1" src="Orange.jpg" class=Picture1" " alt=""></a>
-                <div id="essaie">
+                <div class="essaie">
                     <a class="titleOfManga" href='#'>Orange</a>
                     <p>3€</p>
                     <p>État du livre:Comme neuf</p>
