setting up title of Event

--- a/fileEvent.html
+++ b/fileEvent.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Event.css">
     <title>Event at Paris</title>
 </head>
 <body>
     <header>
-        <h1>Voici le titre</h1>
+        <h1>Évenement à Paris le 27 juillet 2021</h1>
 
     </header>
     <main id="">
