--- a/fileEvent.html
+++ b/fileEvent.html
@@ -9,26 +9,33 @@
 <body>
     <header>
         <h1>Évenement à Paris le 27 juillet 2021</h1>
-
+        <div id="parentLelouch">
+            <img id="Lelouch" src="Lelouch.png" alt="Aidez moi :'(">
+        </div>
     </header>
-    <main id="">
-        <article class="item">
-             <img src="" alt="Allez sur google chrome pour voir les photos ^^">           
+    <main id="grid">
+        <ul id='description'>
+            <li>L'otaku Show est un endroit où se rassemble une grande communauté de fan de manga/d'animé pour partager leur passion avec d'autres personnes du monde entier !</li>
+            <li>Cet évenement est organisé 1 fois par an et a commencé en 2010.</li>
+            <li>Nous vous invitons à regarder les différentes activitées proposé lors de celui ci grâce à des photos prises des années précédentes</li>
+        </ul>
+        <article id="item1">
+             <img class='Picture' src="Chroniques-Manga-2.jpg" alt="Allez sur google chrome pour voir les photos ^^">           
         </article>
-        <article class="item">
-            <img src="" alt="Allez sur google chrome pour voir les photos ^^">
+        <article id="item2">
+            <img class='Picture' src="Manga.jpg" alt="Allez sur google chrome pour voir les photos ^^">
         </article>
-        <article class="item">
-            <img src="" alt="Allez sur google chrome pour voir les photos ^^">
+        <article id="item3">
+            <img class='Picture' src="E1RUtYdxx_QCAMB0cF6jGbhis3xOuig8pq0zblLq_Zw.jpg" alt="Allez sur google chrome pour voir les photos ^^">
         </article>
-        <article class="item">
-            <img src="" alt="Allez sur google chrome pour voir les photos ^^">
+        <article id="item4">
+            <img class='Picture' src="Vidéo projecteur.jpg" alt="Allez sur google chrome pour voir les photos ^^">
         </article>
-        <article class="item">
-            <img src="" alt="Allez sur google chrome pour voir les photos ^^">
+        <article id="item5">
+            <img class='Picture' src="" alt="Allez sur google chrome pour voir les photos ^^">
         </article>
-        <article class="item">
-            <img src="" alt="Allez sur google chrome pour voir les photos ^^">
+        <article id="item6">
+            <img class='Picture' src="" alt="Allez sur google chrome pour voir les photos ^^">
         </article>
     </main>
     <footer>
