creation logo to event

--- a/fileEvent.html
+++ b/fileEvent.html
@@ -12,8 +12,10 @@
         <div id="parentLelouch">
             <img id="Lelouch" src="Lelouch.png" alt="Aidez moi :'(">
         </div>
+        <p>Otaku <br> Show</br></p>
     </header>
     <main id="grid">
+        <div id='bannerBackground'></div>
         <ul id='description'>
             <li>L'otaku Show est un endroit où se rassemble une grande communauté de fan de manga/d'animé pour partager leur passion avec d'autres personnes du monde entier !</li>
             <li>Cet évenement est organisé 1 fois par an et a commencé en 2010.</li>
