--- a/fileEvent.html
+++ b/fileEvent.html
@@ -22,7 +22,7 @@
             <li>Nous vous invitons à regarder les différentes activitées proposé lors de celui ci grâce à des photos prises des années précédentes</li>
         </ul>
         <article id="item1">
-             <img class='Picture' src="Chroniques-Manga-2.jpg" alt="Allez sur google chrome pour voir les photos ^^">           
+             <img class='Picture' src="Chroniques-Manga-2.jpg" alt="Allez sur google chrome pour voir les photos ^^"> 
         </article>
         <article id="item2">
             <img class='Picture' src="Manga.jpg" alt="Allez sur google chrome pour voir les photos ^^">
@@ -39,6 +39,23 @@
         <article id="item6">
             <img class='Picture' src="" alt="Allez sur google chrome pour voir les photos ^^">
         </article>
+        <div class="font" id='item7'>
+            <p class='backgroundText'>Nous pouvons retrouver une pile de manga que des auteurs sont venues pour faire des autographes à leur fans. Il n'hésitait pas à se prendre en photo avec, etc ... On peut voir des photos d'auteur avec leurs fans plus bas.</p>
+        </div>
+        <div class="font" id='item8'>
+            <p class='backgroundText'>Nous sommes actuellement dans l'inventaire où se retrouve les mangas d'occasions rapportée par la communauté. On peut noter l'excelente bonté de celle-ci. N'hésitez pas à commander ses livres disponibles sur le lien en bas de la page !</p>
+        </div>
+        <div class="font" id='item9'>
+            <p class='backgroundText'>Voici un petit stocks de manga empillé. Ce n'est qu'un site test donc je ne vais pas épiloguer dessus mais sachez que c'est incroyable ^^ !</p>
+        </div>
+        <div class="font" id='item10'>
+            <p class='backgroundText'>Nous sommes ici dans une des nombreuses salles réservées au film.
+                Dans la situation actuelle avec le covid, des salles plus grandes où les personnes peuvent garder 
+                suffisement de distance entre eux pour pouvoir visionner le film sans craintes !</p>
+        </div>
+        <div class="font" id='item11'>
+            <p class='backgroundText'>Voici le texte que je vais mettre devant ou derrière les photos</p>
+        </div>
     </main>
     <footer>
         <ul>
