research good page design

--- a/fileEvent.html
+++ b/fileEvent.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Event.css">
+    <link href="bootstrap.min.css" rel="stylesheet">
     <title>Event at Paris</title>
 </head>
 <body>
@@ -34,16 +35,13 @@
             <img class='Picture' src="Vidéo projecteur.jpg" alt="Allez sur google chrome pour voir les photos ^^">
         </article>
         <article id="item5">
-            <img class='Picture' src="" alt="Allez sur google chrome pour voir les photos ^^">
-        </article>
-        <article id="item6">
-            <img class='Picture' src="" alt="Allez sur google chrome pour voir les photos ^^">
+            <img class='Picture' src="itw_mase_mars2011_1.jpg" alt="Allez sur google chrome pour voir les photos ^^">
         </article>
         <div class="font" id='item7'>
             <p class='backgroundText'>Nous pouvons retrouver une pile de manga que des auteurs sont venues pour faire des autographes à leur fans. Il n'hésitait pas à se prendre en photo avec, etc ... On peut voir des photos d'auteur avec leurs fans plus bas.</p>
         </div>
         <div class="font" id='item8'>
-            <p class='backgroundText'>Nous sommes actuellement dans l'inventaire où se retrouve les mangas d'occasions rapportée par la communauté. On peut noter l'excelente bonté de celle-ci. N'hésitez pas à commander ses livres disponibles sur le lien en bas de la page !</p>
+            <p class='backgroundText'>Nous sommes actuellement dans l'inventaire où se retrouve les mangas d'occasions rapportée par la communauté. On peut noter l'excelente bonté de celle-ci. N'hésitez pas à commander ces livres disponibles sur le lien en bas de la page !</p>
         </div>
         <div class="font" id='item9'>
             <p class='backgroundText'>Voici un petit stocks de manga empillé. Ce n'est qu'un site test donc je ne vais pas épiloguer dessus mais sachez que c'est incroyable ^^ !</p>
@@ -54,11 +52,16 @@
                 suffisement de distance entre eux pour pouvoir visionner le film sans craintes !</p>
         </div>
         <div class="font" id='item11'>
-            <p class='backgroundText'>Voici le texte que je vais mettre devant ou derrière les photos</p>
+            <p class='backgroundText'>Nous avons ici, comme promis, un auteur de manga du nom de Motorô Mase. Il a crée un manga du nom de 'ikigami' (si vous ne l'avez pas encore vous, allez y tout de suite il est super). Oui on fait un peu de pub mais peu importe, ca en vaut la chandelle !</p>
         </div>
     </main>
     <footer>
-        <ul>
+        <div id='textFooter'>
+            <p>Pour participer à l'évenement -> 
+                <button type='btn' class="btn btn-success">Clique ici pour t'inscrire !</button>
+            </p>
+        </div>
+        <ul id='footer'>
             <li><a href='#'>Phone : 00 00 00 00 00</a></li>
             <li><a href='#'>Mail : caverseDeLotaku@gmail.com</a></li>
             <li><a href='index.html'>Redirection vers le site de vente de manga</a></li>
